# render

./: .gitignore  ALL_FIXES_SUMMARY.md  CMakeLists.txt  COMMIT_MESSAGE.txt  FINAL_COMMIT_MESSAGE.txt  FINAL_SUMMARY.txt  LICENSE  OPTIMIZATION_COMMIT_MESSAGE.txt  QUICK_SUMMARY.txt  README.md  README_CN.md  README_EN.md  SECURITY_IMPROVEMENTS.md  add_copyright.ps1  build.bat  clean_build.bat  dependency_graph.dot  diagnose_build.bat  rebuild.bat  setup-dependencies.ps1  test_incremental.bat  test_incremental_build.bat  test_scene.json  test_transform_optimization.bat
docs/: API_DOCUMENTATION_STATUS.md  API_DOCUMENTATION_SUMMARY.md  API_REFERENCE.md  CCD_USAGE_GUIDE.md  CIRCULAR_REFERENCE_DETECTION_SYSTEM.md  CODE_QUALITY_INDEX.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  ECS_ASYNCRESOURCELOADER_FIXES_SUMMARY.md  ECS_ASYNCRESOURCELOADER_SAFETY_REVIEW.md  ECS_EXECUTION_COMPLETE.md  ECS_FINAL_IMPLEMENTATION_REPORT.md  ECS_IMPLEMENTATION_SUMMARY.md  ECS_IMPROVEMENTS_SUMMARY.md  ECS_INTEGRATION.md  ECS_OPENGLCONTEXT_REVIEW_SUMMARY.md  ECS_OPENGLCONTEXT_SAFETY_REVIEW.md  ECS_OPENGLCONTEXT_USAGE_GUIDE.md  ECS_QUICK_START.md  ECS_REMAINING_FEATURES_ASSESSMENT.md  ECS_RENDERER_INTEGRATION_ANALYSIS.md  ECS_RESOURCE_MANAGER_SAFETY_REVIEW.md  ECS_RESOURCE_REGISTRATION_GUIDE.md  ECS_SAFETY_IMPROVEMENTS.md  ECS_SECURITY_ANALYSIS.md  ECS_TRANSFORM_FIX_IMPLEMENTED.md  ECS_TRANSFORM_REVIEW_SUMMARY.md  ECS_TRANSFORM_SAFETY_REVIEW.md  FEATURE_LIST.md  FINAL_SUMMARY_PHASE1_MODEL_RENDERING.md  HUD_DEVELOPMENT_PLAN.md  INDEX.md  JSON_SERIALIZATION_GUIDE.md  MATERIAL_SORTING_ARCHITECTURE.md  MATERIAL_SYSTEM.md  MATH_FINAL_OPTIMIZATION_REPORT.md  MESH_ASSIMP_ENHANCEMENT_PLAN.md  MESH_THREAD_SAFETY_OPTIMIZATION.md  MODEL_ECS_INTEGRATION_PLAN.md  MULTITHREADING_OPTIMIZATION_FINAL_REPORT.md  (+39 more)
examples/: 01_basic_window.cpp  02_shader_test.cpp  03_geometry_shader_test.cpp  04_state_management_test.cpp  05_texture_test.cpp  06_mesh_test.cpp  07_thread_safe_test.cpp  08_renderer_thread_safe_test.cpp  09_texture_thread_safe_test.cpp  10_mesh_thread_safe_test.cpp  11_model_loader_test.cpp  12_material_test.cpp  13_material_thread_safe_test.cpp  14_model_material_loader_test.cpp  15_resource_manager_test.cpp  16_resource_manager_thread_safe_test.cpp  17_model_with_resource_manager_test.cpp  18_math_test.cpp  19_math_benchmark.cpp  20_camera_test.cpp  21_transform_thread_safe_test.cpp  22_gl_thread_safety_test.cpp  23_logger_test.cpp  24_async_logger_test.cpp  25_test_window_resize_callback.cpp  26_test_eigen_alignment.cpp  27_test_resource_handle.cpp  28_circular_reference_detection_test.cpp  29_async_loading_test.cpp  30_framebuffer_test.cpp  31_ecs_basic_test.cpp  32_ecs_renderer_test.cpp  33_ecs_async_test.cpp  34_postprocess_test.cpp  35_ecs_comprehensive_test.cpp  35_ecs_comprehensive_test_README.md  36_ecs_transform_safety_test.cpp  37_batching_benchmark.cpp  38_sprite_render_test.cpp  39_sprite_api_test.cpp  (+28 more)
render/: .gitignore  CMakeLists.txt  README.md
render/docs/: API_DOCUMENTATION_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  FEATURE_LIST.md  INDEX.md  MATERIAL_SYSTEM.md  MESH_THREAD_SAFETY.md  README.md  RENDERER_THREAD_SAFETY.md  RENDERING_LAYERS.md  THREAD_SAFETY.md  THREAD_SAFETY_SUMMARY.md
render/docs/api/: Material.md  Mesh.md  MeshLoader.md  OpenGLContext.md  README.md  RenderState.md  Renderer.md  ResourceManager.md  Shader.md  Texture.md  TextureLoader.md  Types.md  UniformManager.md
render/docs/todolists/: PHASE1_BASIC_RENDERING.md
render/examples/: 01_basic_window.cpp  02_shader_test.cpp  03_geometry_shader_test.cpp  05_texture_test.cpp  09_texture_thread_safe_test.cpp  10_mesh_thread_safe_test.cpp  16_resource_manager_thread_safe_test.cpp  17_model_with_resource_manager_test.cpp  18_math_test.cpp  CMakeLists.txt
render/include/render/: logger.h  math_utils.h  mesh.h  mesh_loader.h  opengl_context.h  render_state.h  renderer.h  resource_manager.h  shader.h  shader_cache.h  texture.h  texture_loader.h  types.h  uniform_manager.h
render/models/: README.md  Readme.txt
render/shaders/: basic.vert  material_phong.frag  material_phong.vert  mesh_test.frag  mesh_test.vert  solid_color.frag  solid_color.vert  wireframe.geom  wireframe.vert
render/src/core/: render_state.cpp  renderer.cpp  resource_manager.cpp
render/src/rendering/: material.cpp  mesh.cpp  mesh_loader.cpp  shader.cpp  shader_cache.cpp  texture.cpp  texture_loader.cpp  uniform_manager.cpp
render/src/utils/: logger.cpp
render/tests/: CMakeLists.txt
render/textures/: README.md
shaders/: basic.frag  basic.vert  camera_test.frag  camera_test.vert  instance_culling.comp  material_phong.frag  material_phong.vert  mesh_test.frag  normal_map.frag  normal_map.vert  point_to_quad.frag  point_to_quad.geom  point_to_quad.vert  screen.frag  screen.vert  solid_color.vert  sprite.frag  (+4 more)
tests/: CMakeLists.txt  application_boot_scene_module_matrix_test.cpp  application_boot_scene_sync_test.cpp  application_boot_scene_test.cpp  async_resource_loader_failure_test.cpp  mesh_tangent_test.cpp  model_loader_regression_test.cpp  renderer_layer_mask_test.cpp  scene_graph_demo_test.cpp  scene_manager_resource_test.cpp  scene_manager_stress_test.cpp  test_broad_phase.cpp  test_bullet_adapter_collision.cpp  test_bullet_adapter_eigen_to_bullet.cpp  test_bullet_adapter_material.cpp  test_bullet_adapter_rigid_body.cpp  test_bullet_adapter_shape.cpp  test_bullet_adapter_world.cpp  test_ccd_basic.cpp  test_ccd_integration.cpp  test_ccd_sphere.cpp  test_collision_detection.cpp  test_collision_shapes.cpp  test_collision_system.cpp  test_component_events_system.cpp  test_constraint_solver.cpp  test_fixed_joint.cpp  test_force_and_impulse_system.cpp  test_gjk.cpp  test_joint_constraints.cpp  test_memory_layout_optimization.cpp  test_physics_components.cpp  test_physics_full_pipeline.cpp  test_physics_math.cpp  test_physics_sleeping.cpp  test_physics_transform_sync.cpp  test_physics_update_system_interpolation.cpp  test_physics_world_conditional_compile.cpp  test_physics_world_sync_3_2.cpp  test_physics_world_transform_sync.cpp  (+4 more)
(+418 files in other folders)
